--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +7,9 @@
   <title>Document</title>
   <link
     rel="stylesheet"
-    href="https://unpkg.com/swiper@8/swiper-bundle.min.css" 
-/>
-  <link rel="stylesheet" href='/stylesheets/css/carrosel.css'/>
+    href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+  />
+  <link rel="stylesheet" href="./public/stylesheets/css/carrosel.css">
 </head>
 <body>
   <main>
@@ -19,17 +18,17 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./images/foto_01.png" alt="Foto 01">
+              <img src="./img/foto_01.png" alt="Foto 01">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./images/foto_02.png" alt="Foto 02">
+              <img src="./img/foto_02.png" alt="Foto 02">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./images/foto_03.png" alt="Foto 03">
+              <img src="./img/foto_03.png" alt="Foto 03">
             </div>
           </div>
         </div>
@@ -41,27 +40,6 @@
   </main>
 
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-  <script src="../public/javascripts/script.js"></script>
+  <script src="./public/javascripts/script.js"></script>
 </body>
 </html>
-
-
-<div class="container">
-  <div class="row">
-    <h1>Filmes em destaque</h1>
-  </div>
-  <div class="row">
-    <div class="col-sm4">
-      <div class="card">
-        <div class="cover-image card-img-top"></div>
-        <div class="card-body">
-          <h5 class="card-title">Avatar</h5>
-          <p class="card-text">
-            2009/162 min
-          </p>
-          <a href="#"> class="btn btn-primary">Alugar</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
